# DAQ-Plot-QT

./: CMakeLists.txt  assets.qrc  mainwindow.cpp  mainwindow.h  mainwindow.ui  qcustomplot.cpp  qcustomplot.h
include/libdaq/backend/tcp_client/: tcp_client_backend.h
include/libdaq/command/: base_command.h
include/libdaq/device/: base_device.h  base_device_config.h  base_device_option.h
include/libdaq/device/DAQ122/: daq122.h
include/libdaq/device/DAQ329/: daq329.h
lib/x64/: libdaq-2.0.0.lib
